@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3212 2019/07/31 20:56:33 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3213 2019/07/31 20:58:08 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5169,3 +5169,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated textproc/R-highr to 0.8 [brook 2019-07-31]
 	Updated textproc/R-markdown to 1.0 [brook 2019-07-31]
 	Updated textproc/R-stringi to 1.4.3 [brook 2019-07-31]
+	Updated textproc/R-stringr to 1.4.0 [brook 2019-07-31]
